feat: clicker game

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,12 @@ add_library(HelloWorld STATIC
 target_include_directories(HelloWorld PUBLIC
     "./")
 
+add_executable(Main "main.cpp")
+add_executable(ClickerGame "clicker.cpp" "clicker.hpp")
+find_package(SFML COMPONENTS system window graphics CONFIG REQUIRED)
+target_link_libraries(Main PRIVATE sfml-system sfml-network sfml-graphics sfml-window)
+target_link_libraries(ClickerGame PRIVATE sfml-system sfml-network sfml-graphics sfml-window)
+
 if (${ENABLE_WARNINGS})
     target_set_warnings(TARGET HelloWorld ENABLE ON AS_ERROR OFF)
 endif()
