fix: setup on ubuntu

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,6 +24,10 @@ jobs:
 
     - name: Checkout submodules
       run: git submodule update --init --recursive
+    
+    - name: Setup Ubuntu
+      run: apt-get install -y libx11-dev libxrandr-dev libxi-dev libudev-dev libgl1-mesa-dev
+      if: matrix.os == 'ubuntu-latest'
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
